compiler/testData/diagnostics/tests/multiplatform/topLevelFun/implWithoutHeader.fir.kt
// MODULE: m1-jvm
// FILE: jvm.kt

actual fun <!ACTUAL_WITHOUT_EXPECT, ACTUAL_WITHOUT_EXPECT{METADATA}!>foo<!>() { }
